Addded server connection string for mariadb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,13 @@ server.port=8099
 spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
-spring.datasource.username=root
-spring.datasource.password=B85cyunx
+#spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
+#spring.datasource.username=root
+#spring.datasource.password=B85cyunx
+spring.datasource.url=mysql://x7ydyz52dxfnsvxd:scftzb4ekg2plxj0@klbcedmmqp7w17ik.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xk3nej6fah32za4v
+spring.datasource.username=x7ydyz52dxfnsvxd
+spring.datasource.password=scftzb4ekg2plxj0
+spring.datasource.max-active=10
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.generate-ddl=true
