--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 #for local host mariadb
 spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
 spring.datasource.username=root
-spring.datasource.password=B85cyunx
+spring.datasource.password=B85cyunx50*
 #for heroku
 #spring.datasource.url=mysql://x7ydyz52dxfnsvxd:scftzb4ekg2plxj0@klbcedmmqp7w17ik.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xk3nej6fah32za4v
 #spring.datasource.username=x7ydyz52dxfnsvxd
